--- a/source/stylesheets/product.css.scss
+++ b/source/stylesheets/product.css.scss
@@ -3,6 +3,9 @@
 .product .main .inner {
   margin-top: 76px;
 }
+.product .wrapper { 
+  overflow: hidden;
+}
 .product .images {
   float: right;
   width: 66%;
